[package]
name = "thwack"
description = "Command line version of Go To File utility, similar to the one on GitHub"
authors = ["Yutaka Kamei <kamei@yykamei.me>"]
homepage = "https://github.com/yykamei/thwack"
repository = "https://github.com/yykamei/thwack"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.71.0"
version = "0.10.3"

[dependencies]
copypasta = "0.10.2"
crossterm = "0.29.0"
git2 = { version = "0.20.2", default-features = false }
libc = "0.2.173"
log = { version = "0.4.27", features = ["std"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
